--- a/Deckel-Shop/Views/Profile/Administrator/Users.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Users.cshtml
@@ -9,7 +9,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-    <script src="~/js/Admin.js"></script>
+<script src="~/js/Admin.js"></script>
 
 <ul class="nav nav-tabs nav-tabs AdminNav">
     <li class="nav-item">
@@ -30,7 +30,7 @@
 </ul>
 
 @*search bar*@
-<div class="row mt-3 pt-3 mb-3">
+@*<div class="row mt-3 pt-3 mb-3">
     <div class="col-sm-4">
         <div class="input-group">
             <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc" id="tableSearch">
@@ -38,20 +38,20 @@
                 <button class="input-group-text"><i class="fa fa-search"></i></button>
             </div>
         </div>
-    </div>
-</div>
+    </div>*@
+@*</div>*@
 
 
 @*line break*@
-<div class="row">
-    <div class="col">
-        <hr>
-    </div>
-</div>
+@*<div class="row">
+        <div class="col">
+            <hr>
+        </div>
+    </div>*@
 
-<div class="row">
+<div class="row pt-4">
     <div class="col-sm-12">
-        <table class="table table-striped table-bordered dt-responsive display nowrap" id="tblUser">
+        <table class="table table-striped table-bordered dt-responsive display nowrap" id="myTable">
             <thead>
                 <tr>
                     <th>
@@ -123,3 +123,11 @@
         </div>
     </div>
 </div>
+
+@section Scripts{
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
+
+    <script src="~/js/datatable.js"></script>
+}
