added a separate datatables js code

--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -28,7 +28,7 @@
 
     <div class="row pt-4">
         <div class="col-sm-12">
-            <table class="table table-striped table-bordered dt-responsive display nowrap" id="myTable">
+            <table class="table table-striped table-bordered dt-responsive display nowrap" id="myAdvancedTable">
                 <thead>
                     <tr>
                         <th scope="col">ORDER#</th>
