removed dummy text

--- a/Deckel-Shop/Views/Shared/_Footer.cshtml
+++ b/Deckel-Shop/Views/Shared/_Footer.cshtml
@@ -55,11 +55,11 @@
             <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
 
                 <!-- Links -->
-                <h5>Some Footer Text</h5>
+                <h5>Deckel Shop</h5>
                 <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
 
                 <p class="foot-desc mb-0">
-                    Here is some random text, that has nothing to do with the site. Why are you still reading this?
+                    Founded in 2021 by six .NET students. <br /> <b>This website is not authentic.</b>
                 </p>
 
             </div>
@@ -76,9 +76,9 @@
 
                 <ul class="list-unstyled foot-desc">
                     <li class="mb-2">
-                        <a href="#!">MDBootstrap</a>
+                        <a asp-controller="product" asp-action="index">Propeller Caps</a>
                     </li>
-                    <li class="mb-2">
+                    @*<li class="mb-2">
                         <a href="#!">MDWordPress</a>
                     </li>
                     <li class="mb-2">
@@ -86,7 +86,7 @@
                     </li>
                     <li class="mb-2">
                         <a href="#!">Bootstrap Angular</a>
-                    </li>
+                    </li>*@
                 </ul>
 
             </div>
